# Zappy-AI

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  build.sh
bonus/: .env  simulator.py
bonus/simulator/: __init__.py  env_managment.py  exception.py  file_mgmt.py  logger.py  monitor_thread.py  start_ai.py  start_server.py
src/: look.py  main.c  main.py  movement.py
src/exec/: exec.c  exec.h  get_linux_path.c  get_macos_path.c
src/zappy/: __init__.py  ai.py  ai_helpers.py  color_formatter.py  decision_engine.py  exception.py  logger.py  parsing.py  player.py  rl_agent.py  rl_ai.py  server.py
